fix overflow

--- a/src/app.scss
+++ b/src/app.scss
@@ -1,8 +1,14 @@
 @import "./variables.scss";
 
+html,
+body {
+  max-width: 100vw;
+  overflow-x: clip;
+  overflow-y: auto;
+}
+
 body {
   background-color: $colorWhite;
-  max-width: 100vw;
 }
 
 .app__loading {
